--- a/News/View/CustomTableViewCell.xib
+++ b/News/View/CustomTableViewCell.xib
@@ -1,21 +1,85 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="CustomTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="customNewsCell" rowHeight="266" id="KGk-i7-Jjw" customClass="CustomTableViewCell" customModule="News" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="352" height="266"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="352" height="266"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wJF-f2-EWK">
+                        <rect key="frame" x="10" y="10" width="150" height="125"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="150" id="06V-MF-n0I"/>
+                            <constraint firstAttribute="height" constant="125" id="rXe-Zz-qau"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <real key="value" value="7.5"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ith-xe-lBb">
+                        <rect key="frame" x="168" y="10" width="174" height="21.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="70z-v2-uHb">
+                        <rect key="frame" x="20" y="140" width="312" height="98"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C1n-M7-fAD">
+                        <rect key="frame" x="297" y="248" width="45" height="13"/>
+                        <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <real key="value" value="2.5"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </label>
+                </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="C1n-M7-fAD" secondAttribute="trailing" constant="10" id="6Kk-sF-99F"/>
+                    <constraint firstItem="wJF-f2-EWK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="Gtr-cS-F9j"/>
+                    <constraint firstItem="70z-v2-uHb" firstAttribute="top" secondItem="wJF-f2-EWK" secondAttribute="bottom" constant="5" id="O4K-Rb-990"/>
+                    <constraint firstItem="Ith-xe-lBb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="dao-Y5-TUq"/>
+                    <constraint firstItem="wJF-f2-EWK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="dfY-bl-hB2"/>
+                    <constraint firstAttribute="trailing" secondItem="Ith-xe-lBb" secondAttribute="trailing" constant="10" id="gmu-GS-Mni"/>
+                    <constraint firstAttribute="bottom" secondItem="C1n-M7-fAD" secondAttribute="bottom" constant="5" id="swP-T3-1CO"/>
+                    <constraint firstItem="C1n-M7-fAD" firstAttribute="top" secondItem="70z-v2-uHb" secondAttribute="bottom" constant="10" id="thG-Xa-CXy"/>
+                    <constraint firstItem="Ith-xe-lBb" firstAttribute="leading" secondItem="wJF-f2-EWK" secondAttribute="trailing" constant="8" symbolic="YES" id="yH7-Iu-nHW"/>
+                </constraints>
+                <userDefinedRuntimeAttributes>
+                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                        <integer key="value" value="5"/>
+                    </userDefinedRuntimeAttribute>
+                </userDefinedRuntimeAttributes>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="authorLabel" destination="C1n-M7-fAD" id="aHi-PI-mSa"/>
+                <outlet property="descriptionLabel" destination="70z-v2-uHb" id="gzj-jX-STz"/>
+                <outlet property="newsImageView" destination="wJF-f2-EWK" id="YVg-0z-HZs"/>
+                <outlet property="titleLabel" destination="Ith-xe-lBb" id="l8g-Uh-JBR"/>
+            </connections>
+            <point key="canvasLocation" x="-66.666666666666671" y="99.107142857142847"/>
         </tableViewCell>
     </objects>
 </document>
