--- a/News/View/Base.lproj/Main.storyboard
+++ b/News/View/Base.lproj/Main.storyboard
@@ -3,7 +3,6 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
-        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -20,7 +19,7 @@
                         <subviews>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="RLP-q4-9bi">
                                 <rect key="frame" x="188.5" y="429.5" width="37" height="37"/>
-                                <color key="color" systemColor="systemOrangeColor"/>
+                                <color key="color" name="AccentColor"/>
                             </activityIndicatorView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="News" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Q6-LW-Mtm">
                                 <rect key="frame" x="20" y="54" width="374" height="36"/>
@@ -69,7 +68,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KwQ-0I-Tz5">
-                                <rect key="frame" x="0.0" y="94" width="414" height="768"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <wkWebViewConfiguration key="configuration">
                                     <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
@@ -77,15 +76,14 @@
                                 </wkWebViewConfiguration>
                             </wkWebView>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lj4-1x-DPw">
-                                <rect key="frame" x="0.0" y="44" width="414" height="45"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="45" id="NfF-KF-CvM"/>
-                                </constraints>
+                                <textAttributes key="titleTextAttributes">
+                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="12"/>
+                                </textAttributes>
                                 <items>
                                     <navigationItem id="M7f-Od-5ir">
-                                        <barButtonItem key="leftBarButtonItem" id="D4q-es-nIe">
-                                            <imageReference key="image" image="arrow.backward" catalog="system" symbolScale="default"/>
+                                        <barButtonItem key="leftBarButtonItem" image="arrow.backward" catalog="system" id="D4q-es-nIe">
                                             <connections>
                                                 <action selector="navigationBackButtonAction:" destination="lOb-2p-87M" id="MRx-Az-HPX"/>
                                             </connections>
@@ -95,7 +93,7 @@
                             </navigationBar>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="rYB-fy-FDP">
                                 <rect key="frame" x="188.5" y="429.5" width="37" height="37"/>
-                                <color key="color" systemColor="systemOrangeColor"/>
+                                <color key="color" name="AccentColor"/>
                             </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="2KQ-jY-CDX"/>
@@ -104,7 +102,7 @@
                             <constraint firstItem="2KQ-jY-CDX" firstAttribute="bottom" secondItem="KwQ-0I-Tz5" secondAttribute="bottom" id="1mP-B0-bM3"/>
                             <constraint firstItem="Lj4-1x-DPw" firstAttribute="top" secondItem="2KQ-jY-CDX" secondAttribute="top" id="9ag-zJ-16j"/>
                             <constraint firstItem="2KQ-jY-CDX" firstAttribute="trailing" secondItem="KwQ-0I-Tz5" secondAttribute="trailing" id="H7w-HR-KJW"/>
-                            <constraint firstItem="KwQ-0I-Tz5" firstAttribute="top" secondItem="Lj4-1x-DPw" secondAttribute="bottom" constant="5" id="MzW-Qa-b4g"/>
+                            <constraint firstItem="KwQ-0I-Tz5" firstAttribute="top" secondItem="Lj4-1x-DPw" secondAttribute="bottom" id="MzW-Qa-b4g"/>
                             <constraint firstItem="Lj4-1x-DPw" firstAttribute="trailing" secondItem="2KQ-jY-CDX" secondAttribute="trailing" id="Qzd-cm-c2j"/>
                             <constraint firstItem="KwQ-0I-Tz5" firstAttribute="leading" secondItem="2KQ-jY-CDX" secondAttribute="leading" id="dDr-nF-mka"/>
                             <constraint firstItem="rYB-fy-FDP" firstAttribute="centerX" secondItem="JOH-PE-kfs" secondAttribute="centerX" id="grz-Ib-2kr"/>
@@ -132,9 +130,6 @@
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
